# mitchell-xmonad

./: .ghcid  .xmobarrc  Bloop.hs  Debug.hs  FixedColumn.hs  Main.hs  MitchellLayout.hs  Utils.hs  install  install-xmobar.sh  mitchell-xmonad.cabal  showwg  stack.yaml
