name: mitchell-xmonad
version: 1
build-type: Simple
cabal-version: >= 1.2

executable mitchell-xmonad
  main-is: Main.hs
  other-modules: Bloop, Debug, MitchellLayout
  build-depends:
      base
    , bytestring
    , containers
    , mtl
    , transformers
    , unix
    , xmonad
    , xmonad-contrib
    , X11
  ghc-options: -Wall -O
